# list-movies

./: README.md
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c420e4e3900dc06c8153.json  cmakeFiles-v1-1f5067c0da56e92c465c.json  codemodel-v2-19a30b28d0531178f6b3.json  codemodel-v2-26c9d3fa17071ef084c0.json  codemodel-v2-ef790b4c3adcd5c31687.json  directory-.-Debug-69a6c226c4ff0933f948.json  directory-.-Debug-73456db3beef4e2631cf.json  directory-.-Debug-e16de7b09e0b79aca6b2.json  index-2024-03-19T22-29-15-0532.json  index-2024-03-20T23-47-38-0102.json  index-2024-03-21T22-34-10-0933.json  index-2024-03-22T15-52-29-0722.json  target-list-movies-Debug-20a91ce4c1194f917122.json  target-list-movies-Debug-699208cb1dc9ce507efb.json  target-list-movies-Debug-9c2998bb89343693769e.json  (+5 more)
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: list_movies.cmake
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_list-movies.cmake  Qt6_QmlPlugins_Imports_list-movies.rsp
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/list-movies_autogen/: deps
build-list-movies-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/list-movies_autogen/EWIEGA46WW/: qrc_qml.cpp
list-movies/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
list-movies/control/: detailscreencontrol.cpp  mainscreencontrol.cpp  mainscreencontrol.h
list-movies/controller/: moviecontroller.cpp  moviecontroller.h
list-movies/converter/: movieconverter.cpp  movieconverter.h  showconverter.cpp  showconverter.h
list-movies/custom/: ButtonCustom.qml  DetailComponent.qml  Divider.qml  Header.qml  MoviePreview.qml  SearchField.qml  TextFieldCustom.qml
list-movies/model/: moviemodel.cpp  moviemodel.h  showmodel.cpp  showmodel.h
list-movies/network/: networkrequester.cpp  networkrequester.h
list-movies/screens/: DetailScreen.qml  MainScreen.qml
(+17 files in other folders)
